--- a/public/home.html
+++ b/public/home.html
@@ -131,7 +131,8 @@
                     class="button-default"
                     id="transactions-button"
                   >
-                    Ver todas
+                    Ver todos os lançamentos
+                  
                   </button>
                 </div>
               </div>
@@ -236,7 +237,7 @@
                 >
                   Cancelar
                 </button>
-                <button type="submit" class="button-default">Adicionar</button>
+                <button type="submit" class="button-default">Adicionar lançamento</button>
               </div>
             </form>
           </div>
