--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                         id="session-check"
                       />
                       <label class="form-check-label" for="session-check"
-                        >Permanecer logado.</label
+                        >Manter login.</label
                       >
                     </div>
                     <button type="submit" class="button-login">Entrar</button>
@@ -94,13 +94,13 @@
               <div class="row">
                 <div class="col">
                   <p class="text-center mt-2 form-text">
-                    Ainda não tem conta?
+                    Ainda não possui conta?
                     <span
                       id="link-conta"
                       class="link-default"
                       data-bs-toggle="modal"
                       data-bs-target="#register-modal"
-                      >Criar conta.
+                      >Crie sua conta.
                     </span>
                   </p>
                 </div>
@@ -180,8 +180,7 @@
                     required
                   />
                   <div id="emailHelp" class="form-text">
-                    Utilize uma senha fácil de lembrar e anote para não
-                    esquecer.
+                    Utilize uma senha única.
                   </div>
                 </div>
               </div>
